# MyHomeLab

./: .gitignore  README.md  package.json  pyproject.toml  run_backend_todo.sh  run_frontend.sh
BackEnd/: serve.py
BackEnd/todo/: app.py  routes.py
BackEnd/todo/data/: todos.csv
FrontEnd/: index.html  package-lock.json  package.json
FrontEnd/public/: index.html
FrontEnd/src/: App.css  App.js  App.jsx
FrontEnd/src/Hardware_Projects/: README.md
FrontEnd/src/WebApps/: README.md  TodoApp.css  TodoApp.jsx
FrontEnd/src/components/: Navbar.jsx
FrontEnd/src/pages/: AppsHardwarePage.css  AppsHardwarePage.jsx  AppsPage.jsx  GithubPage.css  GithubPage.jsx  HardwarePage.jsx  HomePage.jsx
